--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,4 @@ steps:
     npm install
     npm run build
     nps test
-  displayName: 'npm install, build, and test'
+  displayName: 'npm install, build and test'
